Parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> functions
Rule 2     functions -> function functions
Rule 3     functions -> function
Rule 4     function -> func_decl NEWLINE func_body result NEWLINE
Rule 5     result -> RESULT expression
Rule 6     func_body -> statements
Rule 7     func_body -> empty
Rule 8     func_decl -> TASK VARIABLE parameters
Rule 9     func_decl -> TASK error
Rule 10    parameters -> VARIABLE parameters
Rule 11    parameters -> VARIABLE
Rule 12    parameters -> empty
Rule 13    parameters -> error
Rule 14    statements -> statement statements
Rule 15    statements -> statement
Rule 16    statement -> PLEASE statement THANKS NEWLINE
Rule 17    statement -> PLEASE statement NEWLINE
Rule 18    statement -> var_declaration NEWLINE
Rule 19    statement -> expression NEWLINE
Rule 20    statement -> for
Rule 21    statement -> switch
Rule 22    statement -> command NEWLINE
Rule 23    statement -> print NEWLINE
Rule 24    statement -> print_word NEWLINE
Rule 25    statement -> empty NEWLINE
Rule 26    print_word -> PRINT QUOTE VARIABLE QUOTE
Rule 27    print -> PRINT expression
Rule 28    statement -> statement THANKS NEWLINE
Rule 29    command -> MOVE
Rule 30    command -> ROTATE LEFT
Rule 31    command -> ROTATE RIGHT
Rule 32    expression -> GET ENVIRONMENT
Rule 33    for -> FOR VARIABLE BOUNDARY VARIABLE STEP VARIABLE statements_group
Rule 34    for -> FOR error NEWLINE
Rule 35    statements_group -> LBRACKET NEWLINE statements RBRACKET NEWLINE
Rule 36    statements_group -> statement
Rule 37    statements_group -> LBRACKET RBRACKET NEWLINE
Rule 38    switch -> SWITCH expression NEWLINE TRUE statements_group FALSE statements_group
Rule 39    switch -> SWITCH expression NEWLINE FALSE statements_group TRUE statements_group
Rule 40    switch -> SWITCH expression NEWLINE TRUE statements_group
Rule 41    switch -> SWITCH expression NEWLINE FALSE statements_group
Rule 42    switch -> SWITCH error NEWLINE
Rule 43    expression -> expression binary_operator expression
Rule 44    binary_operator -> PLUS
Rule 45    binary_operator -> MINUS
Rule 46    binary_operator -> MULTIPLY
Rule 47    binary_operator -> DIVIDE
Rule 48    binary_operator -> AND_OPERATOR
Rule 49    expression -> unary_operator expression
Rule 50    unary_operator -> MXEQ_OPERATOR
Rule 51    unary_operator -> MXLT_OPERATOR
Rule 52    unary_operator -> MXGT_OPERATOR
Rule 53    unary_operator -> MXLTE_OPERATOR
Rule 54    unary_operator -> MXGTE_OPERATOR
Rule 55    unary_operator -> ELEQ_OPERATOR
Rule 56    unary_operator -> ELLT_OPERATOR
Rule 57    unary_operator -> ELGT_OPERATOR
Rule 58    unary_operator -> ELLTE_OPERATOR
Rule 59    unary_operator -> ELGTE_OPERATOR
Rule 60    unary_operator -> NOT_OPERATOR
Rule 61    unary_operator -> MXTRUE_OPERATOR
Rule 62    unary_operator -> MXFALSE_OPERATOR
Rule 63    unary_operator -> SIZE_OPERATOR
Rule 64    unary_operator -> LOGITIZE_OPERATOR
Rule 65    unary_operator -> DIGITIZE_OPERATOR
Rule 66    expression -> base_values
Rule 67    expression -> assignment
Rule 68    expression -> indexing
Rule 69    expression -> do
Rule 70    expression -> get
Rule 71    expression -> reduce
Rule 72    expression -> extend
Rule 73    assignment -> expression ASSIGNMENT expression
Rule 74    reduce -> REDUCE_OPERATOR expression dimensions
Rule 75    reduce -> REDUCE_OPERATOR error
Rule 76    extend -> EXTEND_OPERATOR expression dimensions
Rule 77    extend -> EXTEND_OPERATOR error
Rule 78    do -> DO VARIABLE call_parameters
Rule 79    do -> DO error
Rule 80    call_parameters -> call_parameter call_parameters
Rule 81    call_parameters -> call_parameter
Rule 82    call_parameter -> expression
Rule 83    call_parameter -> error
Rule 84    get -> GET VARIABLE
Rule 85    get -> GET error
Rule 86    expression -> LBRACKET expression RBRACKET
Rule 87    expression -> error expression RBRACKET
Rule 88    expression -> LBRACKET expression error
Rule 89    expression -> VARIABLE
Rule 90    number -> OCT_NUMBER
Rule 91    number -> DEC_NUMBER
Rule 92    number -> HEX_NUMBER
Rule 93    boolean -> TRUE
Rule 94    boolean -> FALSE
Rule 95    base_values -> number
Rule 96    base_values -> boolean
Rule 97    initializer -> base_values
Rule 98    var_declaration -> VAR VARIABLE OS_BRACKET dimensions CS_BRACKET ASSIGNMENT initializer
Rule 99    var_declaration -> VAR VARIABLE ASSIGNMENT expression
Rule 100   var_declaration -> VAR error
Rule 101   indexing -> expression OS_BRACKET dimensions CS_BRACKET
Rule 102   dimensions -> dimension COMMA dimensions
Rule 103   dimensions -> dimension
Rule 104   dimension -> expression
Rule 105   dimension -> error
Rule 106   empty -> <empty>

Terminals, with rules where they appear

AND_OPERATOR         : 48
ASSIGNMENT           : 73 98 99
BOUNDARY             : 33
COMMA                : 102
CS_BRACKET           : 98 101
DEC_NUMBER           : 91
DIGITIZE_OPERATOR    : 65
DIVIDE               : 47
DO                   : 78 79
ELEQ_OPERATOR        : 55
ELGTE_OPERATOR       : 59
ELGT_OPERATOR        : 57
ELLTE_OPERATOR       : 58
ELLT_OPERATOR        : 56
ENVIRONMENT          : 32
EXTEND_OPERATOR      : 76 77
FALSE                : 38 39 41 94
FOR                  : 33 34
GET                  : 32 84 85
HEX_NUMBER           : 92
LBRACKET             : 35 37 86 88
LEFT                 : 30
LOGITIZE_OPERATOR    : 64
MINUS                : 45
MOVE                 : 29
MULTIPLY             : 46
MXEQ_OPERATOR        : 50
MXFALSE_OPERATOR     : 62
MXGTE_OPERATOR       : 54
MXGT_OPERATOR        : 52
MXLTE_OPERATOR       : 53
MXLT_OPERATOR        : 51
MXTRUE_OPERATOR      : 61
NEWLINE              : 4 4 16 17 18 19 22 23 24 25 28 34 35 35 37 38 39 40 41 42
NOT_OPERATOR         : 60
OCT_NUMBER           : 90
OS_BRACKET           : 98 101
PLEASE               : 16 17
PLUS                 : 44
PRINT                : 26 27
QUOTE                : 26 26
RBRACKET             : 35 37 86 87
REDUCE_OPERATOR      : 74 75
RESULT               : 5
RIGHT                : 31
ROTATE               : 30 31
SIZE_OPERATOR        : 63
STEP                 : 33
SWITCH               : 38 39 40 41 42
TASK                 : 8 9
THANKS               : 16 28
TRUE                 : 38 39 40 93
VAR                  : 98 99 100
VARIABLE             : 8 10 11 26 33 33 33 78 84 89 98 99
error                : 9 13 34 42 75 77 79 83 85 87 88 100 105

Nonterminals, with rules where they appear

assignment           : 67
base_values          : 66 97
binary_operator      : 43
boolean              : 96
call_parameter       : 80 81
call_parameters      : 78 80
command              : 22
dimension            : 102 103
dimensions           : 74 76 98 101 102
do                   : 69
empty                : 7 12 25
expression           : 5 19 27 38 39 40 41 43 43 49 73 73 74 76 82 86 87 88 99 101 104
extend               : 72
for                  : 20
func_body            : 4
func_decl            : 4
function             : 2 3
functions            : 1 2
get                  : 70
indexing             : 68
initializer          : 98
number               : 95
parameters           : 8 10
print                : 23
print_word           : 24
program              : 0
reduce               : 71
result               : 4
statement            : 14 15 16 17 28 36
statements           : 6 14 35
statements_group     : 33 38 38 39 39 40 41
switch               : 21
unary_operator       : 49
var_declaration      : 18

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . functions
    (2) functions -> . function functions
    (3) functions -> . function
    (4) function -> . func_decl NEWLINE func_body result NEWLINE
    (8) func_decl -> . TASK VARIABLE parameters
    (9) func_decl -> . TASK error

    TASK            shift and go to state 5

    program                        shift and go to state 1
    functions                      shift and go to state 2
    function                       shift and go to state 3
    func_decl                      shift and go to state 4

state 1

    (0) S' -> program .



state 2

    (1) program -> functions .

    $end            reduce using rule 1 (program -> functions .)


state 3

    (2) functions -> function . functions
    (3) functions -> function .
    (2) functions -> . function functions
    (3) functions -> . function
    (4) function -> . func_decl NEWLINE func_body result NEWLINE
    (8) func_decl -> . TASK VARIABLE parameters
    (9) func_decl -> . TASK error

    $end            reduce using rule 3 (functions -> function .)
    TASK            shift and go to state 5

    function                       shift and go to state 3
    functions                      shift and go to state 6
    func_decl                      shift and go to state 4

state 4

    (4) function -> func_decl . NEWLINE func_body result NEWLINE

    NEWLINE         shift and go to state 7


state 5

    (8) func_decl -> TASK . VARIABLE parameters
    (9) func_decl -> TASK . error

    VARIABLE        shift and go to state 8
    error           shift and go to state 9


state 6

    (2) functions -> function functions .

    $end            reduce using rule 2 (functions -> function functions .)


state 7

    (4) function -> func_decl NEWLINE . func_body result NEWLINE
    (6) func_body -> . statements
    (7) func_body -> . empty
    (14) statements -> . statement statements
    (15) statements -> . statement
    (106) empty -> .
    (16) statement -> . PLEASE statement THANKS NEWLINE
    (17) statement -> . PLEASE statement NEWLINE
    (18) statement -> . var_declaration NEWLINE
    (19) statement -> . expression NEWLINE
    (20) statement -> . for
    (21) statement -> . switch
    (22) statement -> . command NEWLINE
    (23) statement -> . print NEWLINE
    (24) statement -> . print_word NEWLINE
    (25) statement -> . empty NEWLINE
    (28) statement -> . statement THANKS NEWLINE
    (98) var_declaration -> . VAR VARIABLE OS_BRACKET dimensions CS_BRACKET ASSIGNMENT initializer
    (99) var_declaration -> . VAR VARIABLE ASSIGNMENT expression
    (100) var_declaration -> . VAR error
    (32) expression -> . GET ENVIRONMENT
    (43) expression -> . expression binary_operator expression
    (49) expression -> . unary_operator expression
    (66) expression -> . base_values
    (67) expression -> . assignment
    (68) expression -> . indexing
    (69) expression -> . do
    (70) expression -> . get
    (71) expression -> . reduce
    (72) expression -> . extend
    (86) expression -> . LBRACKET expression RBRACKET
    (87) expression -> . error expression RBRACKET
    (88) expression -> . LBRACKET expression error
    (89) expression -> . VARIABLE
    (33) for -> . FOR VARIABLE BOUNDARY VARIABLE STEP VARIABLE statements_group
    (34) for -> . FOR error NEWLINE
    (38) switch -> . SWITCH expression NEWLINE TRUE statements_group FALSE statements_group
    (39) switch -> . SWITCH expression NEWLINE FALSE statements_group TRUE statements_group
    (40) switch -> . SWITCH expression NEWLINE TRUE statements_group
    (41) switch -> . SWITCH expression NEWLINE FALSE statements_group
    (42) switch -> . SWITCH error NEWLINE
    (29) command -> . MOVE
    (30) command -> . ROTATE LEFT
    (31) command -> . ROTATE RIGHT
    (27) print -> . PRINT expression
    (26) print_word -> . PRINT QUOTE VARIABLE QUOTE
    (50) unary_operator -> . MXEQ_OPERATOR
    (51) unary_operator -> . MXLT_OPERATOR
    (52) unary_operator -> . MXGT_OPERATOR
    (53) unary_operator -> . MXLTE_OPERATOR
    (54) unary_operator -> . MXGTE_OPERATOR
    (55) unary_operator -> . ELEQ_OPERATOR
    (56) unary_operator -> . ELLT_OPERATOR
    (57) unary_operator -> . ELGT_OPERATOR
    (58) unary_operator -> . ELLTE_OPERATOR
    (59) unary_operator -> . ELGTE_OPERATOR
    (60) unary_operator -> . NOT_OPERATOR
    (61) unary_operator -> . MXTRUE_OPERATOR
    (62) unary_operator -> . MXFALSE_OPERATOR
    (63) unary_operator -> . SIZE_OPERATOR
    (64) unary_operator -> . LOGITIZE_OPERATOR
    (65) unary_operator -> . DIGITIZE_OPERATOR
    (95) base_values -> . number
    (96) base_values -> . boolean
    (73) assignment -> . expression ASSIGNMENT expression
    (101) indexing -> . expression OS_BRACKET dimensions CS_BRACKET
    (78) do -> . DO VARIABLE call_parameters
    (79) do -> . DO error
    (84) get -> . GET VARIABLE
    (85) get -> . GET error
    (74) reduce -> . REDUCE_OPERATOR expression dimensions
    (75) reduce -> . REDUCE_OPERATOR error
    (76) extend -> . EXTEND_OPERATOR expression dimensions
    (77) extend -> . EXTEND_OPERATOR error
    (90) number -> . OCT_NUMBER
    (91) number -> . DEC_NUMBER
    (92) number -> . HEX_NUMBER
    (93) boolean -> . TRUE
    (94) boolean -> . FALSE

    NEWLINE         reduce using rule 106 (empty -> .)
    RESULT          reduce using rule 106 (empty -> .)
    PLEASE          shift and go to state 14
    VAR             shift and go to state 22
    GET             shift and go to state 25
    LBRACKET        shift and go to state 34
    error           shift and go to state 24
    VARIABLE        shift and go to state 23
    FOR             shift and go to state 35
    SWITCH          shift and go to state 36
    MOVE            shift and go to state 39
    ROTATE          shift and go to state 40
    PRINT           shift and go to state 41
    MXEQ_OPERATOR   shift and go to state 42
    MXLT_OPERATOR   shift and go to state 43
    MXGT_OPERATOR   shift and go to state 44
    MXLTE_OPERATOR  shift and go to state 45
    MXGTE_OPERATOR  shift and go to state 46
    ELEQ_OPERATOR   shift and go to state 47
    ELLT_OPERATOR   shift and go to state 48
    ELGT_OPERATOR   shift and go to state 49
    ELLTE_OPERATOR  shift and go to state 50
    ELGTE_OPERATOR  shift and go to state 51
    NOT_OPERATOR    shift and go to state 52
    MXTRUE_OPERATOR shift and go to state 53
    MXFALSE_OPERATOR shift and go to state 54
    SIZE_OPERATOR   shift and go to state 55
    LOGITIZE_OPERATOR shift and go to state 56
    DIGITIZE_OPERATOR shift and go to state 57
    DO              shift and go to state 60
    REDUCE_OPERATOR shift and go to state 61
    EXTEND_OPERATOR shift and go to state 62
    OCT_NUMBER      shift and go to state 63
    DEC_NUMBER      shift and go to state 64
    HEX_NUMBER      shift and go to state 65
    TRUE            shift and go to state 37
    FALSE           shift and go to state 38

    func_body                      shift and go to state 10
    statements                     shift and go to state 11
    empty                          shift and go to state 12
    statement                      shift and go to state 13
    var_declaration                shift and go to state 15
    expression                     shift and go to state 16
    for                            shift and go to state 17
    switch                         shift and go to state 18
    command                        shift and go to state 19
    print                          shift and go to state 20
    print_word                     shift and go to state 21
    unary_operator                 shift and go to state 26
    base_values                    shift and go to state 27
    assignment                     shift and go to state 28
    indexing                       shift and go to state 29
    do                             shift and go to state 30
    get                            shift and go to state 31
    reduce                         shift and go to state 32
    extend                         shift and go to state 33
    number                         shift and go to state 58
    boolean                        shift and go to state 59

state 8

    (8) func_decl -> TASK VARIABLE . parameters
    (10) parameters -> . VARIABLE parameters
    (11) parameters -> . VARIABLE
    (12) parameters -> . empty
    (13) parameters -> . error
    (106) empty -> .

    VARIABLE        shift and go to state 66
    error           shift and go to state 69
    NEWLINE         reduce using rule 106 (empty -> .)

    parameters                     shift and go to state 67
    empty                          shift and go to state 68

state 9

    (9) func_decl -> TASK error .

    NEWLINE         reduce using rule 9 (func_decl -> TASK error .)


state 10

    (4) function -> func_decl NEWLINE func_body . result NEWLINE
    (5) result -> . RESULT expression

    RESULT          shift and go to state 71

    result                         shift and go to state 70

state 11

    (6) func_body -> statements .

    RESULT          reduce using rule 6 (func_body -> statements .)


state 12

    (7) func_body -> empty .
    (25) statement -> empty . NEWLINE

    RESULT          reduce using rule 7 (func_body -> empty .)
    NEWLINE         shift and go to state 72


state 13

    (14) statements -> statement . statements
    (15) statements -> statement .
    (28) statement -> statement . THANKS NEWLINE
    (14) statements -> . statement statements
    (15) statements -> . statement
    (16) statement -> . PLEASE statement THANKS NEWLINE
    (17) statement -> . PLEASE statement NEWLINE
    (18) statement -> . var_declaration NEWLINE
    (19) statement -> . expression NEWLINE
    (20) statement -> . for
    (21) statement -> . switch
    (22) statement -> . command NEWLINE
    (23) statement -> . print NEWLINE
    (24) statement -> . print_word NEWLINE
    (25) statement -> . empty NEWLINE
    (28) statement -> . statement THANKS NEWLINE
    (98) var_declaration -> . VAR VARIABLE OS_BRACKET dimensions CS_BRACKET ASSIGNMENT initializer
    (99) var_declaration -> . VAR VARIABLE ASSIGNMENT expression
    (100) var_declaration -> . VAR error
    (32) expression -> . GET ENVIRONMENT
    (43) expression -> . expression binary_operator expression
    (49) expression -> . unary_operator expression
    (66) expression -> . base_values
    (67) expression -> . assignment
    (68) expression -> . indexing
    (69) expression -> . do
    (70) expression -> . get
    (71) expression -> . reduce
    (72) expression -> . extend
    (86) expression -> . LBRACKET expression RBRACKET
    (87) expression -> . error expression RBRACKET
    (88) expression -> . LBRACKET expression error
    (89) expression -> . VARIABLE
    (33) for -> . FOR VARIABLE BOUNDARY VARIABLE STEP VARIABLE statements_group
    (34) for -> . FOR error NEWLINE
    (38) switch -> . SWITCH expression NEWLINE TRUE statements_group FALSE statements_group
    (39) switch -> . SWITCH expression NEWLINE FALSE statements_group TRUE statements_group
    (40) switch -> . SWITCH expression NEWLINE TRUE statements_group
    (41) switch -> . SWITCH expression NEWLINE FALSE statements_group
    (42) switch -> . SWITCH error NEWLINE
    (29) command -> . MOVE
    (30) command -> . ROTATE LEFT
    (31) command -> . ROTATE RIGHT
    (27) print -> . PRINT expression
    (26) print_word -> . PRINT QUOTE VARIABLE QUOTE
    (106) empty -> .
    (50) unary_operator -> . MXEQ_OPERATOR
    (51) unary_operator -> . MXLT_OPERATOR
    (52) unary_operator -> . MXGT_OPERATOR
    (53) unary_operator -> . MXLTE_OPERATOR
    (54) unary_operator -> . MXGTE_OPERATOR
    (55) unary_operator -> . ELEQ_OPERATOR
    (56) unary_operator -> . ELLT_OPERATOR
    (57) unary_operator -> . ELGT_OPERATOR
    (58) unary_operator -> . ELLTE_OPERATOR
    (59) unary_operator -> . ELGTE_OPERATOR
    (60) unary_operator -> . NOT_OPERATOR
    (61) unary_operator -> . MXTRUE_OPERATOR
    (62) unary_operator -> . MXFALSE_OPERATOR
    (63) unary_operator -> . SIZE_OPERATOR
    (64) unary_operator -> . LOGITIZE_OPERATOR
    (65) unary_operator -> . DIGITIZE_OPERATOR
    (95) base_values -> . number
    (96) base_values -> . boolean
    (73) assignment -> . expression ASSIGNMENT expression
    (101) indexing -> . expression OS_BRACKET dimensions CS_BRACKET
    (78) do -> . DO VARIABLE call_parameters
    (79) do -> . DO error
    (84) get -> . GET VARIABLE
    (85) get -> . GET error
    (74) reduce -> . REDUCE_OPERATOR expression dimensions
    (75) reduce -> . REDUCE_OPERATOR error
    (76) extend -> . EXTEND_OPERATOR expression dimensions
    (77) extend -> . EXTEND_OPERATOR error
    (90) number -> . OCT_NUMBER
    (91) number -> . DEC_NUMBER
    (92) number -> . HEX_NUMBER
    (93) boolean -> . TRUE
    (94) boolean -> . FALSE

    RESULT          reduce using rule 15 (statements -> statement .)
    RBRACKET        reduce using rule 15 (statements -> statement .)
    THANKS          shift and go to state 74
    PLEASE          shift and go to state 14
    VAR             shift and go to state 22
    GET             shift and go to state 25
    LBRACKET        shift and go to state 34
    error           shift and go to state 24
    VARIABLE        shift and go to state 23
    FOR             shift and go to state 35
    SWITCH          shift and go to state 36
    MOVE            shift and go to state 39
    ROTATE          shift and go to state 40
    PRINT           shift and go to state 41
    NEWLINE         reduce using rule 106 (empty -> .)
    MXEQ_OPERATOR   shift and go to state 42
    MXLT_OPERATOR   shift and go to state 43
    MXGT_OPERATOR   shift and go to state 44
    MXLTE_OPERATOR  shift and go to state 45
    MXGTE_OPERATOR  shift and go to state 46
    ELEQ_OPERATOR   shift and go to state 47
    ELLT_OPERATOR   shift and go to state 48
    ELGT_OPERATOR   shift and go to state 49
    ELLTE_OPERATOR  shift and go to state 50
    ELGTE_OPERATOR  shift and go to state 51
    NOT_OPERATOR    shift and go to state 52
    MXTRUE_OPERATOR shift and go to state 53
    MXFALSE_OPERATOR shift and go to state 54
    SIZE_OPERATOR   shift and go to state 55
    LOGITIZE_OPERATOR shift and go to state 56
    DIGITIZE_OPERATOR shift and go to state 57
    DO              shift and go to state 60
    REDUCE_OPERATOR shift and go to state 61
    EXTEND_OPERATOR shift and go to state 62
    OCT_NUMBER      shift and go to state 63
    DEC_NUMBER      shift and go to state 64
    HEX_NUMBER      shift and go to state 65
    TRUE            shift and go to state 37
    FALSE           shift and go to state 38

    statement                      shift and go to state 13
    statements                     shift and go to state 73
    var_declaration                shift and go to state 15
    expression                     shift and go to state 16
    for                            shift and go to state 17
    switch                         shift and go to state 18
    command                        shift and go to state 19
    print                          shift and go to state 20
    print_word                     shift and go to state 21
    empty                          shift and go to state 75
    unary_operator                 shift and go to state 26
    base_values                    shift and go to state 27
    assignment                     shift and go to state 28
    indexing                       shift and go to state 29
    do                             shift and go to state 30
    get                            shift and go to state 31
    reduce                         shift and go to state 32
    extend                         shift and go to state 33
    number                         shift and go to state 58
    boolean                        shift and go to state 59

state 14

    (16) statement -> PLEASE . statement THANKS NEWLINE
    (17) statement -> PLEASE . statement NEWLINE
    (16) statement -> . PLEASE statement THANKS NEWLINE
    (17) statement -> . PLEASE statement NEWLINE
    (18) statement -> . var_declaration NEWLINE
    (19) statement -> . expression NEWLINE
    (20) statement -> . for
    (21) statement -> . switch
    (22) statement -> . command NEWLINE
    (23) statement -> . print NEWLINE
    (24) statement -> . print_word NEWLINE
    (25) statement -> . empty NEWLINE
    (28) statement -> . statement THANKS NEWLINE
    (98) var_declaration -> . VAR VARIABLE OS_BRACKET dimensions CS_BRACKET ASSIGNMENT initializer
    (99) var_declaration -> . VAR VARIABLE ASSIGNMENT expression
    (100) var_declaration -> . VAR error
    (32) expression -> . GET ENVIRONMENT
    (43) expression -> . expression binary_operator expression
    (49) expression -> . unary_operator expression
    (66) expression -> . base_values
    (67) expression -> . assignment
    (68) expression -> . indexing
    (69) expression -> . do
    (70) expression -> . get
    (71) expression -> . reduce
    (72) expression -> . extend
    (86) expression -> . LBRACKET expression RBRACKET
    (87) expression -> . error expression RBRACKET
    (88) expression -> . LBRACKET expression error
    (89) expression -> . VARIABLE
    (33) for -> . FOR VARIABLE BOUNDARY VARIABLE STEP VARIABLE statements_group
    (34) for -> . FOR error NEWLINE
    (38) switch -> . SWITCH expression NEWLINE TRUE statements_group FALSE statements_group
    (39) switch -> . SWITCH expression NEWLINE FALSE statements_group TRUE statements_group
    (40) switch -> . SWITCH expression NEWLINE TRUE statements_group
    (41) switch -> . SWITCH expression NEWLINE FALSE statements_group
    (42) switch -> . SWITCH error NEWLINE
    (29) command -> . MOVE
    (30) command -> . ROTATE LEFT
    (31) command -> . ROTATE RIGHT
    (27) print -> . PRINT expression
    (26) print_word -> . PRINT QUOTE VARIABLE QUOTE
    (106) empty -> .
    (50) unary_operator -> . MXEQ_OPERATOR
    (51) unary_operator -> . MXLT_OPERATOR
    (52) unary_operator -> . MXGT_OPERATOR
    (53) unary_operator -> . MXLTE_OPERATOR
    (54) unary_operator -> . MXGTE_OPERATOR
    (55) unary_operator -> . ELEQ_OPERATOR
    (56) unary_operator -> . ELLT_OPERATOR
    (57) unary_operator -> . ELGT_OPERATOR
    (58) unary_operator -> . ELLTE_OPERATOR
    (59) unary_operator -> . ELGTE_OPERATOR
    (60) unary_operator -> . NOT_OPERATOR
    (61) unary_operator -> . MXTRUE_OPERATOR
    (62) unary_operator -> . MXFALSE_OPERATOR
    (63) unary_operator -> . SIZE_OPERATOR
    (64) unary_operator -> . LOGITIZE_OPERATOR
    (65) unary_operator -> . DIGITIZE_OPERATOR
    (95) base_values -> . number
    (96) base_values -> . boolean
    (73) assignment -> . expression ASSIGNMENT expression
    (101) indexing -> . expression OS_BRACKET dimensions CS_BRACKET
    (78) do -> . DO VARIABLE call_parameters
    (79) do -> . DO error
    (84) get -> . GET VARIABLE
    (85) get -> . GET error
    (74) reduce -> . REDUCE_OPERATOR expression dimensions
    (75) reduce -> . REDUCE_OPERATOR error
    (76) extend -> . EXTEND_OPERATOR expression dimensions
    (77) extend -> . EXTEND_OPERATOR error
    (90) number -> . OCT_NUMBER
    (91) number -> . DEC_NUMBER
    (92) number -> . HEX_NUMBER
    (93) boolean -> . TRUE
    (94) boolean -> . FALSE

    PLEASE          shift and go to state 14
    VAR             shift and go to state 22
    GET             shift and go to state 25
    LBRACKET        shift and go to state 34
    error           shift and go to state 24
    VARIABLE        shift and go to state 23
    FOR             shift and go to state 35
    SWITCH          shift and go to state 36
    MOVE            shift and go to state 39
    ROTATE          shift and go to state 40
    PRINT           shift and go to state 41
    NEWLINE         reduce using rule 106 (empty -> .)
    MXEQ_OPERATOR   shift and go to state 42
    MXLT_OPERATOR   shift and go to state 43
    MXGT_OPERATOR   shift and go to state 44
    MXLTE_OPERATOR  shift and go to state 45
    MXGTE_OPERATOR  shift and go to state 46
    ELEQ_OPERATOR   shift and go to state 47
    ELLT_OPERATOR   shift and go to state 48
    ELGT_OPERATOR   shift and go to state 49
    ELLTE_OPERATOR  shift and go to state 50
    ELGTE_OPERATOR  shift and go to state 51
    NOT_OPERATOR    shift and go to state 52
    MXTRUE_OPERATOR shift and go to state 53
    MXFALSE_OPERATOR shift and go to state 54
    SIZE_OPERATOR   shift and go to state 55
    LOGITIZE_OPERATOR shift and go to state 56
    DIGITIZE_OPERATOR shift and go to state 57
    DO              shift and go to state 60
    REDUCE_OPERATOR shift and go to state 61
    EXTEND_OPERATOR shift and go to state 62
    OCT_NUMBER      shift and go to state 63
    DEC_NUMBER      shift and go to state 64
    HEX_NUMBER      shift and go to state 65
    TRUE            shift and go to state 37
    FALSE           shift and go to state 38

    statement                      shift and go to state 76
    var_declaration                shift and go to state 15
    expression                     shift and go to state 16
    for                            shift and go to state 17
    switch                         shift and go to state 18
    command                        shift and go to state 19
    print                          shift and go to state 20
    print_word                     shift and go to state 21
    empty                          shift and go to state 75
    unary_operator                 shift and go to state 26
    base_values                    shift and go to state 27
    assignment                     shift and go to state 28
    indexing                       shift and go to state 29
    do                             shift and go to state 30
    get                            shift and go to state 31
    reduce                         shift and go to state 32
    extend                         shift and go to state 33
    number                         shift and go to state 58
    boolean                        shift and go to state 59

state 15

    (18) statement -> var_declaration . NEWLINE

    NEWLINE         shift and go to state 77


state 16

    (19) statement -> expression . NEWLINE
    (43) expression -> expression . binary_operator expression
    (73) assignment -> expression . ASSIGNMENT expression
    (101) indexing -> expression . OS_BRACKET dimensions CS_BRACKET
    (44) binary_operator -> . PLUS
    (45) binary_operator -> . MINUS
    (46) binary_operator -> . MULTIPLY
    (47) binary_operator -> . DIVIDE
    (48) binary_operator -> . AND_OPERATOR

    NEWLINE         shift and go to state 78
    ASSIGNMENT      shift and go to state 80
    OS_BRACKET      shift and go to state 81
    PLUS            shift and go to state 82
    MINUS           shift and go to state 83
    MULTIPLY        shift and go to state 84
    DIVIDE          shift and go to state 85
    AND_OPERATOR    shift and go to state 86

    binary_operator                shift and go to state 79

state 17

    (20) statement -> for .

    THANKS          reduce using rule 20 (statement -> for .)
    PLEASE          reduce using rule 20 (statement -> for .)
    VAR             reduce using rule 20 (statement -> for .)
    GET             reduce using rule 20 (statement -> for .)
    LBRACKET        reduce using rule 20 (statement -> for .)
    error           reduce using rule 20 (statement -> for .)
    VARIABLE        reduce using rule 20 (statement -> for .)
    FOR             reduce using rule 20 (statement -> for .)
    SWITCH          reduce using rule 20 (statement -> for .)
    MOVE            reduce using rule 20 (statement -> for .)
    ROTATE          reduce using rule 20 (statement -> for .)
    PRINT           reduce using rule 20 (statement -> for .)
    MXEQ_OPERATOR   reduce using rule 20 (statement -> for .)
    MXLT_OPERATOR   reduce using rule 20 (statement -> for .)
    MXGT_OPERATOR   reduce using rule 20 (statement -> for .)
    MXLTE_OPERATOR  reduce using rule 20 (statement -> for .)
    MXGTE_OPERATOR  reduce using rule 20 (statement -> for .)
    ELEQ_OPERATOR   reduce using rule 20 (statement -> for .)
    ELLT_OPERATOR   reduce using rule 20 (statement -> for .)
    ELGT_OPERATOR   reduce using rule 20 (statement -> for .)
    ELLTE_OPERATOR  reduce using rule 20 (statement -> for .)
    ELGTE_OPERATOR  reduce using rule 20 (statement -> for .)
    NOT_OPERATOR    reduce using rule 20 (statement -> for .)
    MXTRUE_OPERATOR reduce using rule 20 (statement -> for .)
    MXFALSE_OPERATOR reduce using rule 20 (statement -> for .)
    SIZE_OPERATOR   reduce using rule 20 (statement -> for .)
    LOGITIZE_OPERATOR reduce using rule 20 (statement -> for .)
    DIGITIZE_OPERATOR reduce using rule 20 (statement -> for .)
    DO              reduce using rule 20 (statement -> for .)
    REDUCE_OPERATOR reduce using rule 20 (statement -> for .)
    EXTEND_OPERATOR reduce using rule 20 (statement -> for .)
    OCT_NUMBER      reduce using rule 20 (statement -> for .)
    DEC_NUMBER      reduce using rule 20 (statement -> for .)
    HEX_NUMBER      reduce using rule 20 (statement -> for .)
    TRUE            reduce using rule 20 (statement -> for .)
    FALSE           reduce using rule 20 (statement -> for .)
    NEWLINE         reduce using rule 20 (statement -> for .)
    RESULT          reduce using rule 20 (statement -> for .)
    RBRACKET        reduce using rule 20 (statement -> for .)


state 18

    (21) statement -> switch .
